[tool.poetry]
name = "protokoll300"
version = "0.1.3"
description = ""
authors = ["Zofia Kubrak <zofiakubrak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
